--- a/hobby.html
+++ b/hobby.html
@@ -35,7 +35,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-auto">
       <div class="container-fluid">
-        <a class="navbar-brand mx-auto px-3" href="#">
+        <a class="navbar-brand mx-auto px-3" href="index.html">
           <img
             src="logo.png"
             alt="Logo"
@@ -58,7 +58,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="resume.html">Resume</a>
